# not-autotools

./: ChangeLog.md  README.md  macro-index.md  not-autotools.m4  not-m4.m4  package.json
collection-utils/: create_test_directory.sh  macro-index-generator.sh  strip-all-comments.sh
examples/NA_AMEND/amendments/: code-header.h
examples/NA_AMEND/src/: Makefile.am  main.c
examples/na_amend/: ChangeLog  Makefile.am  NEWS  README  configure.ac  package.json
examples/na_amend/amendments/: long-long-sum-test.h
examples/na_amend/autostuff/m4/: not-autotools.m4
examples/na_amend/models/: main.h
examples/not-autoversion/extended-example/: .editorconfig  ChangeLog  Makefile.am  configure.ac  package.json
examples/not-autoversion/extended-example/autostuff/m4/: index.m4  not-autotools.m4  not-extended-config.m4
examples/not-autoversion/extended-example/autostuff/shadows/: package.json.in
examples/not-autoversion/extended-example/src/: foobar.c
examples/not-autoversion/reverse-chronological-order/: .editorconfig  HISTORY.m4  package.json
examples/not-autoversion/reverse-chronological-order/autostuff/m4/: index.m4  not-autoversion.m4
examples/not-autoversion/reverse-chronological-order/src/: foobar.c
examples/not-autoversion/simple-example/: HISTORY.m4  configure.ac
examples/not-autoversion/simple-example/autostuff/m4/: not-autotools.m4
examples/not-autoversion/simple-example/src/: foobar.h
examples/not-parallel-configure/: AUTHORS  configure.ac
examples/not-parallel-configure/autostuff/m4/: not-parallel-configure.m4
examples/not-parallel-configure/src/: Makefile.am
introspect/: not-autoversion-introspect.m4
m4/: not-ac-messages.m4  not-automake.m4  not-autoreconf.m4  not-autoshell.m4  not-autotools.m4  not-autoversion.m4  not-cc.m4  not-extended-config.m4  not-fancy-texts.m4  not-increments.m4  not-m4sugar.m4  not-misc.m4  not-multiversion.m4  not-parallel-configure.m4  not-utf8.m4
pkgutils/: macro-index-generator.sh
